[gd_scene load_steps=2 format=3 uid="uid://level_hub_001"]

[ext_resource type="Script" path="res://scripts/ui/level_hub_ui.gd" id="1_level_hub"]

[node name="LevelHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_level_hub")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Where would you like to explore?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="DarkForestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "üå≤ Dark Forest"
custom_minimum_size = Vector2(250, 50)

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 15)

[node name="DungeonButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "üè∞ Dungeon"
custom_minimum_size = Vector2(250, 50)

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 15)

[node name="VillageButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "üèòÔ∏è Village"
custom_minimum_size = Vector2(250, 50)

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="ReturnToSchoolButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "üè´ Return to School"
custom_minimum_size = Vector2(250, 50)
